--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head lang="gl">
-  <title>serxio</title>
+  <title>albahudson fan club</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="/css/main.css" />
 </head>
 
 <body>
-<h1>serx.io</h1>
-<p>:)</p>
+<h1>WEB OFICIAL DO CLUB DE FANS DE ALBAHUDSON</h1>
+<p>é a mellor</p>
 </body>
 </html>
