--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <h1>WEB OFICIAL DO CLUB DE FANS DE ALBAHUDSON</h1>
 <p>é a mellor</p>
+<button type="button" onclick="alert('biquiñooooo')">coidado non pulses este botón porfa</button>
 <img src="https://i.pinimg.com/originals/7e/a7/c8/7ea7c86b67a9fdccaf9fcbf0a2c18bde.gif">
 <img src="https://i.pinimg.com/originals/70/17/69/7017699edecd64c4b0587ca85f404228.gif"> 
 </body>
