--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head lang="gl">
+  <style>
+body {
+  background-color: lightgreen;
+}
+</style>
   <title>albahudson fan club</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
